correction js is visible function

--- a/source/less/blocks/our-office/our-team.less
+++ b/source/less/blocks/our-office/our-team.less
@@ -28,7 +28,7 @@
     filter: grayscale(0);
   }
 
-  &--colored .our-team__image{
+  &--visible .our-team__image{
     -webkit-filter: grayscale(0);
     filter: grayscale(0)
   }
